[package]
name = "agness"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
raw-window-handle = "0.6"
wgpu = { version = "0.19", optional = true }
bytemuck = "1.14"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window"] }

[features]
default = []
wgpu = ["dep:wgpu", "pollster"] 
agness_verbose = []